src/styles/modules/_m-npa-signup.sass
+b(npa-signup)
  color: color(agray, darker)

  +breakpoint(tablet-plus)
    display: grid
    grid-template-columns: 3fr 2fr
    column-gap: $space-m

  +e(heading)
    text-align: center

  +e(content)
    margin: auto
    max-width: 36rem

  +e(fields)
    display: grid
    grid-column-gap: 20px
    grid-row-gap: 20px
    +breakpoint(tablet-plus)
      grid-template-columns: 1fr 1fr

  +e(skip-continue)
    align-items: center
    +rem-fallback(column-gap, $space-xxs)
    display: grid
    grid-template-columns: 1fr 4fr
    text-align: left

  +e(offers-form-desktop)
    margin-top: 135px

+b(npa-signup-whatisthis)
  +breakpoint(tablet-plus)
    display: flex
    grid-template-columns: 3fr 2fr
    +e(content)
      text-align: center

  +e(content)
    margin: auto
    padding: 0 27px

  +e(steps)
    display: grid
    grid-template-columns: 1fr
    padding-left: 1.5em

    +breakpoint(wide)
      +rem-fallback(column-gap, $space-xxl)
      //grid-auto-flow: column
      grid-template-columns: 1fr 1fr

    li
      font-weight: 200
      font-size: $font-size-m
      +rem-fallback(margin-bottom, $space-s)

